--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -17,3 +17,6 @@
   box-shadow: 0px 0px 5px #00ffd8!important;
   border: none;
 }
+.dark-theme #loading-screen {
+  background: #171a1c!important;
+}
