layout distribution, panels, tabs, and utils hidden box

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ textarea, input {
 }
 .o_primary:hover {
 	border: 1px solid #0acbd6;
+	color: #24eaf5;
 	background: none!important;
 }
 .t_primary {
