--- a/css/utils.css
+++ b/css/utils.css
@@ -1,198 +1,287 @@
+/* side panel */
+.opaque {
+  background: #ffffff;
+}
+
+.sidepanelBtn {
+  /* background: #9E9E9E; */
+}
+
+.sidepanelBtn:before {
+  cursor: pointer;
+  position: absolute;
+  /* background-image: url('../img/utils.png'); */
+  content: 'Utils';
+  /* background:url("../img/utils.png"); */
+  width: 50px;
+  height: 50px;
+  top: 50%;
+  left: -50px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  padding: 6px;
+  padding-right: 50px;
+  border: 1px solid #0acbd6;
+  color: #0acbd6;
+  background: #171a1c;
+}
+
+.sidepanel {
+  z-index: 10;
+  position: fixed;
+  top: 30%;
+  right: -400px;
+  width: 400px;
+  transition: all 0.4s;
+  border: 1px solid #0acbd6;
+}
+
+.sidepanelShow {
+  right: 0px;
+}
 
 /* switch button */
 .onoffswitch {
-    position: relative; width: 46px;
-    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+  position: relative;
+  width: 46px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
+
 .onoffswitch-checkbox {
-    display: none;
+  display: none;
 }
+
 .onoffswitch-label {
-    display: block; overflow: hidden; cursor: pointer;
-    height: 20px; padding: 0; line-height: 20px;
-    border: 2px solid #FFFFFF; border-radius: 20px;
-    background-color: #9E9E9E;
-    transition: background-color 0.3s ease-in;
-		margin-bottom: 0;
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  height: 20px;
+  padding: 0;
+  line-height: 20px;
+  border: 2px solid #FFFFFF;
+  border-radius: 20px;
+  background-color: #9E9E9E;
+  transition: background-color 0.3s ease-in;
+  margin-bottom: 0;
 }
+
 .onoffswitch-label:before {
-    content: "";
-    display: block; width: 20px; margin: 0px;
-    background: #FFFFFF;
-    position: absolute; top: 0; bottom: 0;
-    right: 24px;
-    border: 2px solid #FFFFFF; border-radius: 20px;
-    transition: all 0.3s ease-in 0s;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label {
-    background-color: #00eaf7;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label, .onoffswitch-checkbox:checked + .onoffswitch-label:before {
-   border-color: #00eaf7;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label:before {
-    right: 0px;
+  content: "";
+  display: block;
+  width: 20px;
+  margin: 0px;
+  background: #FFFFFF;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 24px;
+  border: 2px solid #FFFFFF;
+  border-radius: 20px;
+  transition: all 0.3s ease-in 0s;
 }
 
+.onoffswitch-checkbox:checked+.onoffswitch-label {
+  background-color: #00eaf7;
+}
 
+.onoffswitch-checkbox:checked+.onoffswitch-label, .onoffswitch-checkbox:checked+.onoffswitch-label:before {
+  border-color: #00eaf7;
+}
+
+.onoffswitch-checkbox:checked+.onoffswitch-label:before {
+  right: 0px;
+}
 
 /* spinner */
 .cssload-loader-inner {
-		bottom: 0;
-		height: 58px;
-		left: 0;
-		margin: auto;
-		position: absolute;
-		right: 0;
-		top: 0;
-		width: 97px;
+  bottom: 0;
+  height: 58px;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 97px;
 }
+
 .cssload-cssload-loader-line-wrap-wrap {
-		animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
-		-o-animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
-		-ms-animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
-		-webkit-animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
-		-moz-animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
-		box-sizing: border-box;
-		-o-box-sizing: border-box;
-		-ms-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		height: 49px;
-		left: 0;
-		overflow: hidden;
-		position: absolute;
-		top: 0;
-		transform-origin: 50% 100%;
-		-o-transform-origin: 50% 100%;
-		-ms-transform-origin: 50% 100%;
-		-webkit-transform-origin: 50% 100%;
-		-moz-transform-origin: 50% 100%;
-		width: 97px;
+  animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
+  -o-animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
+  -ms-animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
+  -webkit-animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
+  -moz-animation: cssload-spin 2300ms cubic-bezier(.175, .885, .32, 1.275) infinite;
+  box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 49px;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  transform-origin: 50% 100%;
+  -o-transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  -webkit-transform-origin: 50% 100%;
+  -moz-transform-origin: 50% 100%;
+  width: 97px;
 }
+
 .cssload-loader-line-wrap {
-		border: 4px solid transparent;
-		border-radius: 100%;
-		-o-border-radius: 100%;
-		-ms-border-radius: 100%;
-		-webkit-border-radius: 100%;
-		-moz-border-radius: 100%;
-		box-sizing: border-box;
-		-o-box-sizing: border-box;
-		-ms-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		height: 97px;
-		left: 0;
-		margin: 0 auto;
-		position: absolute;
-		right: 0;
-		top: 0;
-		width: 97px;
+  border: 4px solid transparent;
+  border-radius: 100%;
+  -o-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 97px;
+  left: 0;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 97px;
 }
-.cssload-cssload-loader-line-wrap-wrap:nth-child(1) { animation-delay: -57.5ms;
-		-o-animation-delay: -57.5ms;
-		-ms-animation-delay: -57.5ms;
-		-webkit-animation-delay: -57.5ms;
-		-moz-animation-delay: -57.5ms; }
-.cssload-cssload-loader-line-wrap-wrap:nth-child(2) { animation-delay: -115ms;
-		-o-animation-delay: -115ms;
-		-ms-animation-delay: -115ms;
-		-webkit-animation-delay: -115ms;
-		-moz-animation-delay: -115ms; }
-.cssload-cssload-loader-line-wrap-wrap:nth-child(3) { animation-delay: -172.5ms;
-		-o-animation-delay: -172.5ms;
-		-ms-animation-delay: -172.5ms;
-		-webkit-animation-delay: -172.5ms;
-		-moz-animation-delay: -172.5ms; }
-.cssload-cssload-loader-line-wrap-wrap:nth-child(4) { animation-delay: -230ms;
-		-o-animation-delay: -230ms;
-		-ms-animation-delay: -230ms;
-		-webkit-animation-delay: -230ms;
-		-moz-animation-delay: -230ms; }
-.cssload-cssload-loader-line-wrap-wrap:nth-child(5) { animation-delay: -287.5ms;
-		-o-animation-delay: -287.5ms;
-		-ms-animation-delay: -287.5ms;
-		-webkit-animation-delay: -287.5ms;
-		-moz-animation-delay: -287.5ms; }
+
+.cssload-cssload-loader-line-wrap-wrap:nth-child(1) {
+  animation-delay: -57.5ms;
+  -o-animation-delay: -57.5ms;
+  -ms-animation-delay: -57.5ms;
+  -webkit-animation-delay: -57.5ms;
+  -moz-animation-delay: -57.5ms;
+}
+
+.cssload-cssload-loader-line-wrap-wrap:nth-child(2) {
+  animation-delay: -115ms;
+  -o-animation-delay: -115ms;
+  -ms-animation-delay: -115ms;
+  -webkit-animation-delay: -115ms;
+  -moz-animation-delay: -115ms;
+}
+
+.cssload-cssload-loader-line-wrap-wrap:nth-child(3) {
+  animation-delay: -172.5ms;
+  -o-animation-delay: -172.5ms;
+  -ms-animation-delay: -172.5ms;
+  -webkit-animation-delay: -172.5ms;
+  -moz-animation-delay: -172.5ms;
+}
+
+.cssload-cssload-loader-line-wrap-wrap:nth-child(4) {
+  animation-delay: -230ms;
+  -o-animation-delay: -230ms;
+  -ms-animation-delay: -230ms;
+  -webkit-animation-delay: -230ms;
+  -moz-animation-delay: -230ms;
+}
+
+.cssload-cssload-loader-line-wrap-wrap:nth-child(5) {
+  animation-delay: -287.5ms;
+  -o-animation-delay: -287.5ms;
+  -ms-animation-delay: -287.5ms;
+  -webkit-animation-delay: -287.5ms;
+  -moz-animation-delay: -287.5ms;
+}
 
 .cssload-cssload-loader-line-wrap-wrap:nth-child(1) .cssload-loader-line-wrap {
-		border-color: rgb(234,71,71);
-		height: 88px;
-		width: 88px;
-		top: 7px;
+  border-color: rgb(234, 71, 71);
+  height: 88px;
+  width: 88px;
+  top: 7px;
 }
+
 .cssload-cssload-loader-line-wrap-wrap:nth-child(2) .cssload-loader-line-wrap {
-		border-color: rgb(234,234,71);
-		height: 74px;
-		width: 74px;
-		top: 14px;
+  border-color: rgb(234, 234, 71);
+  height: 74px;
+  width: 74px;
+  top: 14px;
 }
+
 .cssload-cssload-loader-line-wrap-wrap:nth-child(3) .cssload-loader-line-wrap {
-		border-color: rgb(71,234,71);
-		height: 60px;
-		width: 60px;
-		top: 20px;
+  border-color: rgb(71, 234, 71);
+  height: 60px;
+  width: 60px;
+  top: 20px;
 }
+
 .cssload-cssload-loader-line-wrap-wrap:nth-child(4) .cssload-loader-line-wrap {
-		border-color: rgb(71,234,234);
-		height: 47px;
-		width: 47px;
-		top: 27px;
+  border-color: rgb(71, 234, 234);
+  height: 47px;
+  width: 47px;
+  top: 27px;
 }
+
 .cssload-cssload-loader-line-wrap-wrap:nth-child(5) .cssload-loader-line-wrap {
-		border-color: rgb(71,71,234);
-		height: 33px;
-		width: 33px;
-		top: 34px;
+  border-color: rgb(71, 71, 234);
+  height: 33px;
+  width: 33px;
+  top: 34px;
 }
+
 @keyframes cssload-spin {
-		0%, 15% {
-		transform: rotate(0);
-		transform: rotate(0);
-	}
-	100% {
-		transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
+  0%, 15% {
+    transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
+
 @-o-keyframes cssload-spin {
-		0%, 15% {
-		-o-transform: rotate(0);
-		transform: rotate(0);
-	}
-	100% {
-		-o-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
+  0%, 15% {
+    -o-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  100% {
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
+
 @-ms-keyframes cssload-spin {
-		0%, 15% {
-		-ms-transform: rotate(0);
-		transform: rotate(0);
-	}
-	100% {
-		-ms-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
+  0%, 15% {
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  100% {
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
+
 @-webkit-keyframes cssload-spin {
-		0%, 15% {
-		-webkit-transform: rotate(0);
-		transform: rotate(0);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
+  0%, 15% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
+
 @-moz-keyframes cssload-spin {
-		0%, 15% {
-		-moz-transform: rotate(0);
-		transform: rotate(0);
-	}
-	100% {
-		-moz-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
+  0%, 15% {
+    -moz-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  100% {
+    -moz-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
